btn fixed: going to work on mobile

--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -251,15 +251,15 @@ footer {
 .home .walk .walk-text p {
   margin-bottom: 26px;
 }
-.home .walk .walk-text .btn {
+.home .walk .walk-text .btn button {
   border: 1px solid #22283A;
   color: #F6F7F8;
   background-color: #22283A;
-  padding: 10px;
+  padding: 5px 15px;
   border-radius: 5px;
   font-size: 1.8rem;
 }
-.home .walk .walk-text .btn:hover {
+.home .walk .walk-text .btn button:hover {
   color: #22283A;
   background-color: #F6F7F8;
 }
