--- a/docs/less/home-page.less
+++ b/docs/less/home-page.less
@@ -62,7 +62,10 @@
       }
 
       .btn {
-        .button-style();
+        button{
+          .button-style();
+        }
+        
       }
     }
 
