--- a/docs/less/mixins.less
+++ b/docs/less/mixins.less
@@ -13,7 +13,7 @@
   border: 1px solid @btn-bg-color;
   color: @color;
   background-color: @bg-color;
-  padding: 10px;
+  padding: 5px 15px;
   border-radius: 5px;
   font-size: 1.8rem;
 
